# Changelog
# $Id$

nn-nn-12 - Version 5.1.22
  - Fix for Bug#65508, getCharsetNameForIndex() should be faster.


07-05-12 - Version 5.1.21
  - Added new built-in authentication plugin com.mysql.jdbc.authentication.Sha256PasswordPlugin
    ("sha256_password").

  - Fix for Bug#64731, StringUtils.getBytesWrapped throws StringIndexOutOfBoundsException.

  - Added new built-in authentication plugin com.mysql.jdbc.authentication.MysqlClearPasswordPlugin
    ("mysql_clear_password"). It allows C/J based clients to connect to MySQL accounts which use
    PAM authentication for example. SSL connection required for this authentication method.
    If SSL is not enabled then authentication which requires "mysql_clear_password" will lead to an error.

  - Fix for Bug#13980303, Auth plugin's confidentiality requirements are not checked after Auth Switch Request.

  - Fix for Bug#64205, Connected through Connector/J 5.1 to MySQL 5.5, the error message is garbled.

  - Fix for Bug#37931, Null Pointer Exception Thrown When specifying invalid character_set_results enc.

  - Fix for Bug#36662, TimeUtil.java: MEST mapping n/a.

  - Fix a scalability/memory footprint issue where Object.finalize() was being used on 
    ConnectionImpl to clean up the low-level network connection to MySQL should a 
    connection be abandoned by the application before being cleanly close()d. We now
    track connections in a phantom reference queue, and have a single thread per-vm
    clean these up when the VM notices the connection is no longer referenced by
    anything else.
    
  - Added the ability to add new client-side prepared statement parse info caches by
    implementing com.mysql.jdbc.CacheAdapterFactory and telling the driver to use it
    when "cachePrepStmts=true" via the "parseInfoCacheFactory" configuration property. 
    
  - Implemented JDBC-4.1 methods from Java-7:
  
       - Connection.setSchema(String) - no-op, until we support database==schema in the driver