@@ -2,6 +2,8 @@
 # $Id$
 
 nn-nn-12 - Version 5.1.22
+  - Fix for Bug#41752, Can't connect mysqld which character_set_server=ucs2.
+
   - Fix for Bug#65508, getCharsetNameForIndex() should be faster.
 
 
